RESOLVED FIXED80303
Fix crash in ScrollingCoordinator::updateMainFrameScrollPositionAndScrollLayerPosition
https://bugs.webkit.org/show_bug.cgi?id=80303
Summary Fix crash in ScrollingCoordinator::updateMainFrameScrollPositionAndScrollLaye...
Anders Carlsson
Reported 2012-03-05 11:09:48 PST
Fix crash in ScrollingCoordinator::updateMainFrameScrollPositionAndScrollLayerPosition
Attachments
Patch (1.84 KB, patch)
2012-03-05 11:10 PST, Anders Carlsson
bdakin: review+
Anders Carlsson
Comment 1 2012-03-05 11:10:42 PST
Anders Carlsson
Comment 2 2012-03-05 11:26:14 PST
Note You need to log in before you can comment on or make changes to this bug.