Fix crash in ScrollingCoordinator::updateMainFrameScrollPositionAndScrollLayerPosition https://bugs.webkit.org/show_bug.cgi?id=80303 <rdar://problem/10953682>

Reviewed by Beth Dakin.

Add the same null checks that already exist in updateMainFrameScrollPosition.

* page/scrolling/ScrollingCoordinator.cpp:
(WebCore::ScrollingCoordinator::updateMainFrameScrollPositionAndScrollLayerPosition):

Canonical link: https://commits.webkit.org/97428@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109775 268f45cc-cd09-0410-ab3c-d52691b4dbfc